--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,11 @@ html {
   height: 48px !important;
   box-sizing: border-box !important;
 }
+
+.date-picker {
+  height: 48px !important;
+  box-sizing: border-box !important;
+  padding: 6px;
+  border-radius: 4px;
+  border: 1px solid #b6b6b6;
+}
